syntax = "proto3";

package flowcraft.v1.nodes;

message AiGenNodeState {
  string model_id = 1;
  float progress = 2;
  string current_status = 3;
}